--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
 <title>Ecommerce</title>
 <link rel="icon" type="image/icon" href="ecommercelogo.jpeg">
 <style>
-    body, html {
+    body, html 
+    {
         margin: 0;
         padding: 0;
         height: 100%;
         overflow: hidden;
     }
 
-    iframe {
+    iframe 
+    {
         border: none;
         width: 100%;
         height: 100%;
